# tapioka

./: .gitignore  .lintstagedrc.js  .prettierignore  README.md  mypy.ini  package.json  pyproject.toml
.husky/: pre-commit
src/: main.py
src/projects/sin/: README.md
src/projects/sin/models/: lstm.py
src/projects/sin/runners/: lstm.py
