[tool.poetry]
name = "tapioka"
version = "0.1.0"
description = ""
authors = ["d-kimsuon <d-kimuson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
sklearn = "^0.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[flake8]
# linter の仕事じゃない
max-line-length = 1000
extend-ignore = "E203,W503"
